get rid of the font selection

--- a/Calculators/Web Based Calculators/KetoCalc.html
+++ b/Calculators/Web Based Calculators/KetoCalc.html
@@ -294,7 +294,7 @@ button {
 <i>Scroll down for results after pressing Calculate</i><p/>
 <hr/>
 <h2>Your Scale and Metabolism Numbers</h2>
-<font="Courier New"><p id="results"></p></font>
+<p id="results"></p>
 <h2>Notes</h2>
 <ul>
 <li>The Protein Sparing model attempts to conserve Lean Body Mass by leaving your dietary protein amount constant throughout.
@@ -308,7 +308,7 @@ button {
 It is very important on the <a href="https://paleoleap.com/protein-sparing-modified-fasts/">PSMF</a> that you eat at least the macros listed here. 
 If you go below these numbers you risk lowering your metabolism and you actually can't lose body fat any faster. 
 Attempting to be just above the numbers is OK.
-<font="Courier New"><p id="DietaryMacros"></p></font>
+<p id="DietaryMacros"></p>
 <h2>Notes</h2>
 <ul>
 <li>The protein number is based on <a target="_blank" href="http://www.ketogains.com">KetoGains</a> protein macros.</li>
@@ -320,9 +320,9 @@ This amount of fat in your diet frees up the maximum amount of fat from your bod
 </ul>
 <h2>Can You Fast?</h2>
 One important question to ask when considering extended fasting is whether or not you have sufficient body fat to fast. 
-<font="Courier New"><p id="FastingResults"></p></font>
+<p id="FastingResults"></p>
 <h2>How Much Muscle Can You Gain?</h2>
-<font="Courier New"><p id="Gainz"></p></font>
+<p id="Gainz"></p>
 <h2>Disclaimer</h2>
 Use this information at your own risk and with the advice of your medical professional. 
 We are not doctors nor do we pretend to be one on the Internet.
