fixed goal weight calculation errors

--- a/Calculators/Web Based Calculators/KetoCalc.html
+++ b/Calculators/Web Based Calculators/KetoCalc.html
@@ -131,7 +131,7 @@ button {
 		var currentBodyFatLbs = (currentBodyFatPercentCalculated/100.0) * startingWeightLbs;
 		var goalBodyFatPct = parseFloat(document.getElementById('BodyFat').value)/100.0;
 		var LBMLbs = startingWeightLbs - currentBodyFatLbs;
-		var goalWeight = (LBMLbs * (1.0 + goalBodyFatPct));
+		var goalWeight = (LBMLbs / (1.0 - goalBodyFatPct));
 		var fastingCaloriesAvailableFromFat = currentBodyFatLbs * 31;
 		// Form the output string for the results
 		outResults_parra.innerHTML = "Current Weight: <b>";
@@ -148,7 +148,7 @@ button {
 		outResults_parra.innerHTML += " lbs<br/>";
 		if (currentBodyFatPercentCalculated < goalBodyFatPct * 100.0)
 			outResults_parra.innerHTML += "Note: Your body fat percentage is already lower than your goal" + "<br/>";
-		outResults_parra.innerHTML += "<a target=\"_blank\" href=\"https://en.wikipedia.org/wiki/Lean_body_mass\">Lean Body Mass (LBM)</a>: " + Math.round(LBMLbs);
+		outResults_parra.innerHTML += "<a target=\"_blank\" href=\"https://en.wikipedia.org/wiki/Lean_body_mass\">Lean Body Mass (LBM)</a>: " + LBMLbs.toFixed(1);
 		outResults_parra.innerHTML += " lbs<br/>";
 		outResults_parra.innerHTML += "<a target=\"_blank\" href=\"https://en.wikipedia.org/wiki/Basal_metabolic_rate\">Basal Metabolic Rate (BMR)</a>: " + Math.round(BMRSelected);
 		outResults_parra.innerHTML += " cal/day<br/>";
