--- a/Calculators/Web Based Calculators/KetoCalc.html
+++ b/Calculators/Web Based Calculators/KetoCalc.html
@@ -293,7 +293,7 @@ button {
 		PsmfMacros_parra.innerHTML += " cals), " + (proteinCalsConstant*100/PsmfDietaryCals).toFixed(1);
 		PsmfMacros_parra.innerHTML += "% of calories<br/>";
 		PsmfMacros_parra.innerHTML += "Carbs: 20 g (80 cals), " + (8000/PsmfDietaryCals).toFixed(1);
-		PsmfMacros_parra.innerHTML += "% of calories<br/>"
+		PsmfMacros_parra.innerHTML += "% of calories (from leafy green vegetables)<br/>"
 		PsmfMacros_parra.innerHTML += "Fat: " +(netFatCals/9.0).toFixed(1);
 		PsmfMacros_parra.innerHTML += " g (";
 		PsmfMacros_parra.innerHTML += Math.round(netFatCals);
