--- a/Calculators/Web Based Calculators/ExerciseCalc.html
+++ b/Calculators/Web Based Calculators/ExerciseCalc.html
@@ -206,6 +206,7 @@ responses during incremental exercise in 20-70-yr-old men. Med Sci Sport Exerc 1
 <h2>220 Minus Age Heart Rate Calculations</h2>
 <p id="Calc220_Results"><br/></p>
 
+Here is an interesting read <a target="_blank" href="https://www.asep.org/asep/asep/Robergs2.pdf">THE SURPRISING HISTORY OF THE “HRmax=220-age” EQUATION</a>.</p>
 <h2>Disclaimer</h2>
 Use this information at your own risk and with the advice of your medical professional. 
 We are not doctors nor do we pretend to be one on the Internet.
