Heart Rate Calculator

--- a/Calculators/Web Based Calculators/ExerciseCalc.html
+++ b/Calculators/Web Based Calculators/ExerciseCalc.html
@@ -154,10 +154,9 @@ button {
 	</script>
 </head>
 <body>
-<h1>Exercise Calculator</h1>
-Based on various calculators.
+<h1>Heart Rate Calculator</h1>
+Based on various calculators. I prefer the Maffetone method since it syncs up well with the heart range which maximizes fat burning and minimizes carbohydrate burning.
 <br/>
-<b>Privacy Information</b>: This calculator runs locally on your computer. None of your personal data is stored on our server.
 </p><h2>Enter Your Numbers</h2>
 <form name="Options">
     <div>
@@ -194,10 +193,10 @@ Based on various calculators.
 </form>
 <i>Scroll down for results after pressing Calculate</i><p>
 </p><hr>
-<h2>MAF Heart Rate Calculations</h2>
+<h2>Maffetone (MAF) Heart Rate Calculations</h2>
 <p id="MAF_Results">
 <br/>
-<p>These are based on the <a target="_blank" href="https://philmaffetone.com/180-formula/">Maffetone heart rate numbers</a>.</p>
+<p>These are based on the <a target="_blank" href="https://philmaffetone.com/180-formula/">Maffetone 180-age Heart Rate numbers</a>.</p>
 <h2>Concept 2 Heart Rate Calculations</h2>
 <p id="C2_Results"><br/></p>
 These are based on the <a target="_blank" href="http://www.concept2.com/indoor-rowers/training/tips-and-general-info/training-heart-rate-range">Concept 2 Rower Training Heart Rate Range numbers</a>.
@@ -213,6 +212,7 @@ We are not doctors nor do we pretend to be one on the Internet.
 We do not take responsibility for errors in these calculations.
 We do not guarantee that these numbers will work for people at the extremes of the ranges.
 If you discover an error in calculation, please let us know through email: keto at land-boards dot com.
-
+<br/>
+<p><b>Privacy Information</b>: This calculator runs locally on your computer. None of your personal data is stored on our server.</p>
 
 </body></html>
