--- a/Calculators/Web Based Calculators/ExerciseCalc.html
+++ b/Calculators/Web Based Calculators/ExerciseCalc.html
@@ -74,17 +74,17 @@ button {
 		{
 			illnessOption = -5.0;
 		}
-		heartRate += illnessOption
+		heartRate += illnessOption;
 		var injuredOption = 0.0;
 		if ( document.Options.OptionSelected2[0].checked ) // No
 		{
 			injuredOption = 0.0;
 		}
-		heartRate += injuredOption
 		if ( document.Options.OptionSelected2[1].checked ) // Yes
 		{
 			injuredOption = -5.0;
 		}
+		heartRate += injuredOption
 		var trained2YesOption = 0.0;
 		if ( document.Options.OptionSelected3[0].checked ) // No
 		{
